--- a/tiles.html
+++ b/tiles.html
@@ -4,8 +4,6 @@
 
 const courses = ['Into to SWD','Server Side programming','Database Design','Software Testing','Cybersecurity','TBD']
 
-for(let i=0;i<courses.length;i++){
-
     const Title = function(props) {
         return(
             <h3>{props.Title}</h3>
@@ -21,7 +19,25 @@ for(let i=0;i<courses.length;i++){
                 <Description description =''/>
                     </div>
         }
-}
+
+
+            // trying to get the whole array of classes sent to the root div
+            const Hello = React.createClass({
+            render: function() {
+                let names = ['Jake' ,'jon','cath'] 
+                let namelist = names.map(function(name, index) {
+                    return <li key={index}>{name}</li> 
+                })
+
+                return (
+                    <ul>
+                        {namelist}
+                    </ul>
+                    )
+            }
+        })
+        
+        ReactDOM.render(<Hello />, document.getElementById('container'))
 
 ReactDOM.render(<WeatherTile/>,document.getElementById('root'))
     
