--- a/base.html
+++ b/base.html
@@ -29,11 +29,10 @@
 
 <script type="text/babel">
 
+    // wanted to use a for loop or array.map to display a card for each course
     const courses = ['Into to SWD','Server Side programming','Database Design','Software Testing','Cybersecurity','TBD']
 
     // course info will be part of an object array
-    
-    // for(let i=0;i<courses.length;i++){
     
         const Title = function(props) {
             return(
