Added Software testing to Courses

--- a/base.html
+++ b/base.html
@@ -32,9 +32,7 @@
                 return <div class='App'>
                     <div class='card grid2'>
                         <div class='card-inner'>
-                            <div class='card-front'>
-                                
-                            </div>
+                            <div class='card-front'></div>
                             <div class='card-back'>
                                 <Title/>
                                 <p>This course covers security topics that impact web developers. Explore the OWASP Top 10 security vulnerabilities. Get hands on practice of security-related web programming tasks including: providing authentication, validating input, logging and monitoring, attacking vulnerable web applications and completing Capture The Flag (CTF) challenges. Learn to protect web applications against attacks from malicious hackers.</p>
