--- a/tiles.html
+++ b/tiles.html
@@ -42,7 +42,7 @@
     //     {
     //         return <div id='card'>
     //             <p>
-    //                 {props.courses.map(q=><tr key={q.title}><td>{q.title}</td><td>{q.description}</td></tr>)}
+    //                 {props.courses.map(q=><tr key={q.title}><p>{q.title}</p><p>{q.description}</p></tr>)}
     //             </p>
     //             </div>
     //     }
@@ -51,14 +51,9 @@
         {
             return(
                 <div>
-                    <table>
-                        <tbody>
-                        {props.courses.map(q=><tr key={q.title}><td>{q.title}</td><td>{q.description}</td></tr>)}
-                        </tbody>
-                    </table>
                     <div id='card'>
                         <p>
-                            {props.courses.map(q=><tr key={q.title}><td>{q.title}</td><td>{q.description}</td></tr>)}
+                            {props.courses.map(q=><p key={q.title}><p>{q.title}</p><p>{q.description}</p></p>)}
                         </p>
                     </div>
                 </div>
@@ -67,7 +62,7 @@
 
         const Output = function(props)
         {
-            const courses = [{title:'Into to SWD',description:2000},{title:'Database Design',description:27},{title:'CRO',description: 22}]
+            const courses = [{title:'Into to SWD',description:2000},{title:'Database Design',description:27},{title:'Cross-platform dev',description: 22}]
 
             // you can only return one thing. Thats why we use the <div> tag to enclose
             // the components under one object
@@ -80,7 +75,7 @@
 
         ReactDOM.render(<Output/>,document.getElementById('root'))
 
-        // ReactDOM.render(<CourseTile/>,document.getElementById('root'))
+        // ReacpOM.render(<CourseTile/>,document.getElementById('root'))
     
 
 </script>
