--- a/tiles.html
+++ b/tiles.html
@@ -52,9 +52,13 @@
             return(
                 <div>
                     <div id='card'>
-                        <p>
-                            {props.courses.map(q=><p key={q.title}><p>{q.title}</p><p>{q.description}</p></p>)}
-                        </p>
+                            {props.courses.map(q=>
+                                <div key={q.title}>
+                                    <p>{q.title}</p>
+                                    <p>{q.description}</p>
+                                    </div>
+                                    )
+                                }
                     </div>
                 </div>
             )
